# nakama-cpp

./: .gitignore  CMakeLists.txt  CMakeSettings.json
gen_api/: generate_cpp_api.py
include/nakama-cpp/: NTypes.h
src/: CMakeLists.txt  GrpcClient.cpp  RestClient.cpp
src/api/github.com/heroiclabs/nakama-common/api/: api.pb.cc  api.pb.h
src/api/github.com/heroiclabs/nakama-common/rtapi/: realtime.pb.h
src/api/github.com/heroiclabs/nakama/apigrpc/: apigrpc.grpc.pb.cc  apigrpc.grpc.pb.h  apigrpc.pb.cc
src/api/protoc-gen-openapiv2/options/: annotations.pb.h  openapiv2.pb.h
src/realtime/: NWebsocketCppRest.cpp
